<resources>
    <string name="app_name" translatable="false">MovieRama</string>

    <!-- Navigation labels -->
    <string name="nav_label_movie_details" translatable="false">Movie Details</string>
    <string name="nav_label_home" translatable="false">Home</string>
    <string name="nav_label_settings" translatable="false">Settings</string>
    <string name="nav_label_favourites" translatable="false">Favourite Movies</string>

    <!-- Settings Nav labels -->
    <string name="nav_label_settings_language" translatable="false">Settings Language</string>
    <string name="nav_label_settings_orientation" translatable="false">Settings Orientation</string>
    <string name="nav_label_settings_theme" translatable="false">Settings theme</string>

    <!-- Side menu -->
    <string name="side_menu_home">Home</string>
    <string name="side_menu_favourites">Favourites</string>
    <string name="side_menu_settings">Settings</string>

    <!-- Movies screen -->
    <string name="movies_no_results_found">No results found</string>

    <!-- Movie screen -->
    <string name="movies_search_hint">Search your movie by name</string>
    <string name="movie_description_label">Description</string>
    <string name="movie_director_label">Director</string>
    <string name="movie_cast_label">Cast</string>
    <string name="movie_similar_movies_label">Similar movies</string>
    <string name="movie_reviews_label">Reviews</string>

    <!-- Settings -->
    <string name="setting_title_language">Language</string>
    <string name="setting_title_orientation">Orientation</string>
    <string name="setting_title_theming">Theme</string>

    <string name="settings_landscape_portrait">Portrait</string>
    <string name="settings_landscape_landscape">Landscape</string>

    <string name="settings_language_greek">Greek (GR)</string>
    <string name="settings_language_english">English (EN)</string>

    <string name="settings_dark_theme">Dark</string>
    <string name="settings_light_theme">Light</string>

</resources>