<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@drawable/bg_black_gradient_90"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            tools:title="Movie title">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="28dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_white_backgrounded"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:background="@drawable/bg_top_rounded"
        android:elevation="8dp"
        android:fadingEdge="none"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="6 March 2018" />

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/release_date"
                app:layout_constraintTop_toBottomOf="@+id/release_date"
                tools:rating="3"
                tools:text="Jurassic World: Fallen Kingdom" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/rating"
                app:layout_constraintTop_toBottomOf="@+id/rating"
                tools:text="Action, Adventure, Sci-Fi" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/favourite_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/release_date"
                app:srcCompat="@drawable/bg_favourite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/movie_description_label"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_label"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/description_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="description_label,description_field" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/director_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/movie_director_label"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_field" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/director_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/director_label"
                tools:maxLines="5"
                tools:text="J.A. Bayona" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/director_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="director_label,director_field" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cast_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/movie_cast_label"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/director_field" />

            <com.example.movierama.ui.customviews.ExpandableTextView
                android:id="@+id/cast_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_label"
                app:maxLinesCollapsed="5"
                tools:maxLines="5"
                tools:text="Chris Pratt, Bryce Dallas Howard, Rafe Spall" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/cast_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="cast_label,cast_field" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/similar_movies_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/movie_similar_movies_label"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_field" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar_movies_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:fadingEdge="none"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similar_movies_label"
                tools:itemCount="5"
                tools:listitem="@layout/item_similar_movie" />

            <ProgressBar
                android:id="@+id/loader_similar_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/similar_movies_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/similar_movies_list" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/similar_movies_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="similar_movies_label,similar_movies_list, loader_similar_movies" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reviews_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/movie_reviews_label"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similar_movies_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:fadingEdge="none"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_label"
                tools:itemCount="5"
                tools:listitem="@layout/item_review" />

            <ProgressBar
                android:id="@+id/loader_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/reviews_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reviews_list" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/reviews_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="reviews_label, reviews_list, loader_reviews" />

            <ProgressBar
                android:id="@+id/contentLoader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/similar_movies_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>